# image-viewer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.rst  pyproject.toml  setup.py
.binder/: environment.yml  postBuild
proxy_config/: image_viewer_proxy.py  setup.py
proxy_config/src/image_viewer_proxy/: __init__.py
src/image_viewer/: __init__.py  app.py  cli.py  components.py
