[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "image-viewer"
version = "0.0.1"
license = {file = "LICENSE"}
description="Simple image viewer built with LiberTEM-panel-ui"
readme="README.rst"
requires-python = ">=3.9"
authors = [
    {"name" = "Matthew Bryan", email="matthewbryan52@gmail.com"},
]
dependencies = [
    "libertem_ui@git+https://github.com/LiberTEM/LiberTEM-panel-ui",
    "numpy",
    "scikit-image",
    "panel",
    "rosettasciio",
]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Environment :: Web Environment',
    'Environment :: Console',
]

[project.scripts]
image-viewer = "image_viewer.cli:serve"

[tool.setuptools.packages.find]
where = ["src"]